--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,3 +20,18 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.post-enter {
+  transform: translateX(-350px);
+}
+.post-enter-active {
+  transform: translateX(0px);
+  transition: transform 500ms ease-in;
+}
+.post-exit {
+  transform: translateX(0px);
+}
+.post-exit-active {
+  transform: translateX(-150px);
+  transition: transform 500ms ease-in;
+}
